--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "babel-plugin-lodash": "^3.3.4",
     "css-loader": "^3.5.2",
     "csv-loader": "^3.0.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "sass": "^1.34.0",
